0.11.0 (2015-??-??)

Backwards Incompatibilities
---------------------------

* StatAccumInput Input: percent_threshold param type convert to slice

Bug Handling
------------

Features
--------

* Allow TcpOutput to re-establish the connection after a configurable number of
  successfully delivered messages.

0.10.0 (2015-??-??)
=====================

Features
--------

* Added `set_hostname` option to UdpInput configuration (#1668).

Bug Handling
------------

* Set hostname correctly in the Graylog decoder (#1663).

* Add sample rate support for gauge type in StatsdInput.

* Fixed some cases where SandboxDecoder wasn't correctly setting
  `pack.TrustMsgBytes` to false when needed.

* Fixed broken queue rolling and added test.

* Force ElasticSearch index name to lower case, as required by ElasticSearch.

0.10.0b1 (2015-08-07)
=====================

Backwards Incompatibilities
---------------------------

* `PluginHelper.PipelinePack` method now returns `(*PipelinePack, err)` values
  instead of just `*PipelinePack`.

Features
--------

* Allow multiple sandbox module directories to be specified (#1525).

* Add Nginx stub status lua sandbox decoder.

* Added support for SIGUSR2 signal for use when Heka is wedged, triggers a Heka
  pipeline report to the console, abort and serialize of all sandboxes, and a
  shutdown.

* InputRunner and router's `Inject` methods each now return an error that can
  be checked to verify successful message injection.

* Added `SplitStreamNullSplitterToEOF` to SplitterRunner interface so input
  plugins can avoid generating messages with whatever happens to come back from
  a `Read()` call.

* Validate the buffer max_file_size is greater than MAX_RECORD_SIZE (#1623).

Bug Handling
------------

* Validate the buffer max_file_size is greater than MAX_RECORD_SIZE (#1623).

* Fixed ProcessInput hangs when splitter is defined (#1620, #1644).

* `heka.all-report` and `heka.memstat` messages are now protobuf encoded before