@@ -9,6 +9,7 @@
 #
 # Contributor(s):
 #   Mike Trinkala (trink@mozilla.com)
+#   Rob Miller (rmiller@mozilla.com)
 #
 # ***** END LICENSE BLOCK *****/
 
@@ -18,13 +19,13 @@ import (
 	"sync/atomic"
 	"testing"
 
+	"github.com/Shopify/sarama"
 	"github.com/mozilla-services/heka/message"
 	. "github.com/mozilla-services/heka/pipeline"
 	pipeline_ts "github.com/mozilla-services/heka/pipeline/testsupport"
 	"github.com/mozilla-services/heka/plugins"
 	plugins_ts "github.com/mozilla-services/heka/plugins/testsupport"
 	"github.com/rafrombrc/gomock/gomock"
-	"github.com/rafrombrc/sarama"
 )
 
 func TestVerifyMessageInvalidVariables(t *testing.T) {
@@ -268,12 +269,10 @@ func TestInvalidCompressionCodec(t *testing.T) {
 
 func TestSendMessage(t *testing.T) {
 	ctrl := gomock.NewController(t)
-	b1 := sarama.NewMockBroker(t, 1)
-	b2 := sarama.NewMockBroker(t, 2)
+	broker := sarama.NewMockBroker(t, 2)
 
 	defer func() {
-		b1.Close()
-		b2.Close()
+		broker.Close()
 		ctrl.Finish()
 	}()
 
@@ -281,19 +280,17 @@ func TestSendMessage(t *testing.T) {
 	globals := DefaultGlobals()
 	pConfig := NewPipelineConfig(globals)
 
-	mdr := new(sarama.MetadataResponse)
-	mdr.AddBroker(b2.Addr(), b2.BrokerID())
-	mdr.AddTopicPartition(topic, 0, 2)
-	b1.Returns(mdr)
-
-	pr := new(sarama.ProduceResponse)
-	pr.AddTopicPartition(topic, 0, sarama.NoError)
-	b2.Returns(pr)
+	broker.SetHandlerByMap(map[string]sarama.MockResponse{
+		"MetadataRequest": sarama.NewMockMetadataResponse(t).
+			SetBroker(broker.Addr(), broker.BrokerID()).
+			SetLeader(topic, 0, broker.BrokerID()),
+		"ProduceRequest": sarama.NewMockProduceResponse(t),
+	})
 
 	ko := new(KafkaOutput)
 	ko.SetPipelineConfig(pConfig)
 	config := ko.ConfigStruct().(*KafkaOutputConfig)
-	config.Addrs = append(config.Addrs, b1.Addr())
+	config.Addrs = append(config.Addrs, broker.Addr())
 	config.Topic = topic
 	err := ko.Init(config)
 	if err != nil {
@@ -309,13 +306,8 @@ func TestSendMessage(t *testing.T) {
 	pack := NewPipelinePack(pConfig.InputRecycleChan())
 	pack.Message = msg
 
-	outStr := "Write me out to the network"
-	newpack := NewPipelinePack(nil)
-	newpack.Message = msg
-
 	inChanCall := oth.MockOutputRunner.EXPECT().InChan().AnyTimes()
 	inChanCall.Return(inChan)
-	oth.MockOutputRunner.EXPECT().UsesBuffering().Return(false)
 
 	errChan := make(chan error)
 	startOutput := func() {
@@ -328,6 +320,7 @@ func TestSendMessage(t *testing.T) {
 	oth.MockOutputRunner.EXPECT().Encoder().Return(encoder)
 	oth.MockOutputRunner.EXPECT().Encode(pack).Return(encoder.Encode(pack))
 
+	outStr := "Write me out to the network"
 	pack.Message.SetPayload(outStr)
 	startOutput()
 
