@@ -8,11 +8,18 @@ Backwards Incompatibilities
 Bug Handling
 ------------
 
+* Updated Sarama dependency from pre-1.0 release fork to what is effectively
+  the 1.5.0 release.
+
 Features
 --------
 
 * Allow TcpOutput to re-establish the connection after a configurable number of
   successfully delivered messages.
+
+* Added `git_clone_to_path` to the cmake build to allow git repos to be cloned
+  into alternate locations; useful for relocating forks of Go packages into
+  their original import paths.
 
 0.10.0 (2015-??-??)
 =====================
